syntax = "proto3";

//import "google/protobuf/struct.proto";
package university_management;

option go_package = "/university_management";

message Department {
  int32 id = 1;
  string name = 2;
}

message Student {
  int32 id = 1;
  string name = 2;
  int32 rollNo = 3;
  int32 departmentId = 4;
}

message Staff {
  int32 id = 1;
  string name = 2;
}

message GetDepartmentRequest {
  int32 id = 1;
}

message GetDepartmentResponse {
  Department department = 1;
}

message GetStudentRequest {
  int32 departmentId = 1;
}

message GetStudentResponse {
  Student student = 1;
}
message GetStudentsRequest {
  int32 departmentId = 1;
}

message GetStudentsResponse {
  repeated Student student = 1;
}

message GetStaffsForStudentRequest {
  int32 rollNo = 1;
}

message GetStaffsForStudentResponse {
  repeated Staff staff = 1;
}

service UniversityManagementService {
  rpc GetDepartment (GetDepartmentRequest) returns (GetDepartmentResponse) {
  }

  rpc GetStudents (GetStudentsRequest) returns (GetStudentsResponse) {
  }

  rpc GetStudent (GetStudentRequest) returns (GetStudentResponse) {
  }

  rpc GetStaffsForStudent (GetStaffsForStudentRequest) returns (GetStaffsForStudentResponse) {
  }
}